--- a/flatpak/io.github.serverket.cpugov.yml
+++ b/flatpak/io.github.serverket.cpugov.yml
@@ -20,7 +20,6 @@ modules:
     sources:
       - type: git
         url: https://github.com/Serverket/cpugov.git
-        tag: v0.1.0
-        # For local development, use:
-        # - type: dir
-        #   path: .
+        tag: v0.1.1
+      # - type: dir
+      #   path: ..
