--- a/.github/workflows/release-flatpak.yml
+++ b/.github/workflows/release-flatpak.yml
@@ -6,6 +6,9 @@ on:
       - 'v*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-flatpak:
     name: Build Flatpak Bundle
