chore: release v0.3.0 - unified native architecture
This major release stabilizes the CPU Governor as a production-grade native utility.

Key Highlights:
- Unified Native Package: Consolidated build process into an all-in-one .deb distribution.
- GTK4 UI Refinement: Migrated to native Adwaita symbolic icons (performance ⚡).
- Security & Hardening: Optimized D-Bus policies and Polkit authorization paths.
- Improved Installation: Enhanced daemon/install.sh with real-time bus synchronization.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Build artifacts
 builddir/
 _build/
-.flatpak-builder/
+
 build/
 dist/
 *.egg-info/
@@ -30,3 +30,20 @@ po/*.pot
 venv/
 env/
 .venv/
+
+# Debian packaging artifacts
+obj-*/
+debian/cpugov/
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/*.substvars
+debian/*.log
+*.deb
+*.buildinfo
+*.changes
+*.tar.gz
+*.dsc
+
+# Internal scripts
+update_version.sh
