--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,10 @@
 override_dh_auto_configure:
 	dh_auto_configure -- -Ddaemon=true
 
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -rf builddir obj-x86_64-linux-gnu subprojects
+
 override_dh_auto_install:
 	dh_auto_install
 	# Move systemd unit from /usr/lib/systemd/system to /lib/systemd/system
